# Tek-1-CPE

./: README.md
BSQ/CPE_BSQ_2019/: a.out  bsq  test  test.c  tests2.c
BSQ/CPE_BSQ_2019/bonus/: Makefile  bsq
BSQ/CPE_BSQ_2019/include/: tmp.h
BSQ/CPE_BSQ_2019/src/: algorythm.c  main.c  my_sort_int_array.c  pre_formating.c
CPE_matchstick_2019/: CMakeLists.txt  Makefile  a.out  matchstick  my_test.c
CPE_matchstick_2019/bonus/: matchstick
CPE_matchstick_2019/bonus/include/: all_includes.h
CPE_matchstick_2019/bonus/src/: ai.c  game_loop.c  get_inputs.c  main.c  preparation.c
CPE_matchstick_2019/include/: all_includes.h  my.h
CPE_matchstick_2019/src/: ai.c  final.c  game_loop.c  get_inputs.c  main.c  new_class.c  preparation.c
CPE_matchstick_2019/test_this_norm/: new.c
get_next_line/CPE_getnextline_2019/: a.out  get_next_line.c  get_next_line.h  test  test2
get_next_line/CPE_getnextline_2019/include/: my.h
get_next_line/CPE_getnextline_bootstrap_2019/: CMakeLists.txt  a.out
get_next_line/CPE_getnextline_bootstrap_2019/include/: CPE_getnextline_bootstrap_2019.h
get_next_line/CPE_getnextline_bootstrap_2019/src/: main.c
get_next_line/new_try/: CMakeLists.txt  Makefile  a.out  get_next_line.c  get_next_line.h  main.c
lem_in/CPE_lemin_2019/: Makefile
lem_in/CPE_lemin_2019/maps/: input1  (+3 more)
lem_in/lem_in_zip/: Makefile  lem_in
pushswap/CPE_pushswap_2019/: CMakeLists.txt  Makefile  do_not_add_this.c  run_me
pushswap/new_pushswap/CPE_pushswap_2019/: CMakeLists.txt  do_not_add_this.c
pushswap/new_pushswap/CPE_pushswap_2019/src/: my_merge.c  sort.c
(+181 files in other folders)
